--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -1,5 +1,5 @@
 option_settings:
+  aws:elasticbeanstalk:container:python:
+    WSGIPath: application:app
   aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: static
-  aws:elasticbeanstalk:application:
-    WSGIPath: application:app
